; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/jbd/extr_transaction.c_journal_get_write_access.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/jbd/extr_transaction.c_journal_get_write_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer_head = type { i32 }
%struct.journal_head = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @journal_get_write_access(i32* %0, %struct.buffer_head* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.buffer_head*, align 8
  %5 = alloca %struct.journal_head*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.buffer_head* %1, %struct.buffer_head** %4, align 8
  %7 = load %struct.buffer_head*, %struct.buffer_head** %4, align 8
  %8 = call %struct.journal_head* @journal_add_journal_head(%struct.buffer_head* %7)
  store %struct.journal_head* %8, %struct.journal_head** %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = load %struct.journal_head*, %struct.journal_head** %5, align 8
  %11 = call i32 @do_get_write_access(i32* %9, %struct.journal_head* %10, i32 0)
  store i32 %11, i32* %6, align 4
  %12 = load %struct.journal_head*, %struct.journal_head** %5, align 8
  %13 = call i32 @journal_put_journal_head(%struct.journal_head* %12)
  %14 = load i32, i32* %6, align 4
  ret i32 %14
}

declare dso_local %struct.journal_head* @journal_add_journal_head(%struct.buffer_head*) #1

declare dso_local i32 @do_get_write_access(i32*, %struct.journal_head*, i32) #1

declare dso_local i32 @journal_put_journal_head(%struct.journal_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
